--- a/python/fatcat_web/templates/entity_macros.html
+++ b/python/fatcat_web/templates/entity_macros.html
@@ -28,9 +28,9 @@
 {% macro extra_metadata(extra) -%}
 <table class="ui definition single line fixed compact small unstackable table">
 <tbody>
-{% for (key, value) in extra.items() %}
+{% for (key, value) in extra.items()|sort %}
   {% if key in ("ia", "crossref", "kbart", "arxiv", "jstor", "pubmed") and value is mapping and value %}
-    {% for (inner_key, inner_value) in value.items() %}
+    {% for (inner_key, inner_value) in value.items()|sort %}
       <tr><td class="three wide right aligned"><code>{{ key }}.{{ inner_key }}</code></td>
           <td class="seven wide"><code>{{ inner_value }}</code>
     {% endfor %}
