--- a/python/fatcat_web/templates/home.html
+++ b/python/fatcat_web/templates/home.html
@@ -66,6 +66,7 @@ indexing (aka, linking together of pre-prints and final copies).
             <i class="search icon"></i>
             <input type="text" placeholder="DOI" name="doi" aria-label="lookup paper by DOI">
           </div>
+        <br><a href="/release/lookup">Other Identifiers</a>
         </form>
 <tr><td><b>Container</b>
         <br>journal or serial
