--- a/python/fatcat_web/templates/home.html
+++ b/python/fatcat_web/templates/home.html
@@ -84,6 +84,7 @@ indexing (aka, linking together of pre-prints and final copies).
             <i class="search icon"></i>
             <input type="text" placeholder="ISSN-L" name="issnl" aria-label="lookup journal by ISSN-L">
           </div>
+        <br><a href="/container/lookup">Other Identifiers</a>
         </form>
 
 <tr><td><b>Creator</b>
@@ -102,6 +103,7 @@ indexing (aka, linking together of pre-prints and final copies).
             <i class="search icon"></i>
             <input type="text" placeholder="ORCID" name="orcid" aria-label="lookup author by ORCID">
           </div>
+        <br><a href="/creator/lookup">Other Identifiers</a>
         </form>
 <tr><td><b>File</b>
         <br>specific digital blobs (immutable)
@@ -118,6 +120,7 @@ indexing (aka, linking together of pre-prints and final copies).
             <i class="search icon"></i>
             <input type="text" placeholder="SHA-1" name="sha1" aria-label="lookup file by SHA1">
           </div>
+        <br><a href="/file/lookup">Other Hashes</a>
         </form>
 <tr><td><b>File Set</b>
         <br>datasets, suplementary materials
