--- a/python/fatcat_web/templates/creator_lookup.html
+++ b/python/fatcat_web/templates/creator_lookup.html
@@ -23,7 +23,7 @@ entity.
 <b><a href="https://orcid.org/{{ lookup_value }}">https://orcid.org/{{ lookup_value }}</a></b>
 {% elif lookup_key == "wikidata_qid" %}
 <p>You can check if it is a real Wikidata entity by visiting:
-<b><a href="https://www.wikidata.org/wiki/{{ lookup_value }}/">https://www.wikidata.org/wiki/{{ lookup_value }}/</a></b>
+<b><a href="https://www.wikidata.org/wiki/{{ lookup_value }}">https://www.wikidata.org/wiki/{{ lookup_value }}</a></b>
 {% endif %}
 </div>
 {% endif %}
