add changelog link to header

--- a/python/fatcat_web/templates/base.html
+++ b/python/fatcat_web/templates/base.html
@@ -46,6 +46,7 @@
     </a>
     <a href="/about" class="item">About</a>
     <a href="https://guide.{{ config.FATCAT_DOMAIN }}/" class="item">Guide</a>
+    <a href="/changelog" class="item">Changelog</a>
     <div class="right menu">
       <div class="item" style="padding: 0;">
         <form class="" action="/release/search" method="get" role="search" aria-label="Papers">
