big rewrite of front page; needs polish and testing

--- a/python/fatcat_web/templates/about.html
+++ b/python/fatcat_web/templates/about.html
@@ -1,7 +1,9 @@
 {% extends "base.html" %}
 {% block body %}
 
-<h1>About Fatcat</h1>
+<img class="ui fluid bordered image" src="/static/fatcat.jpg" title="CC0 photo of an oversized feline" alt="">
+
+<h1></h1>
 
 <p>Fatcat is versioned, publicly-editable catalog of research publications:
 journal articles, conference proceedings, pre-prints, blog posts, and so forth.
