--- a/python/fatcat_web/templates/home.html
+++ b/python/fatcat_web/templates/home.html
@@ -11,7 +11,7 @@
 -->
 
 <div class ="ui vertical inverted masthead center aligned segment" style="padding-top: 10em; height: 32em;">
-  <div class="ui container">
+  <div class="ui text container">
     <h1 class="ui header inverted huge centered">Perpetual Access to Millions of Open Research Publications From Around The World</h1>
     <br>
     <form class="" action="/release/search" method="get" role="search" aria-label="papers" itemprop="potentialAction" itemscope itemtype="https://schema.org/SearchAction">
@@ -43,15 +43,15 @@
 </div>
 
 <div class="ui vertical stripe segment" style="padding-top: 2em; padding-bottom: 2em;">
-  <div class="ui container">
+  <div class="ui text container">
   <div class="ui centered grid">
     <div class="row">
-      <div class="three wide column">
+      <div class="four wide column">
         <!-- TODO: don't let it scale down -->
         <img src="https://ia800105.us.archive.org/20/items/OA-JOURNAL-TESTCRAWL-TWO-2018/papers.gif">
       </div>
       <!-- TODO: larger font size -->
-      <div class="nine wide column" style="font-size: 1.1rem;">
+      <div class="ten wide column" style="font-size: 1.1rem;">
         <p><b>Fatcat is a versioned, user-editable catalog of research
         publications including journal articles, conference proceedings, and
         datasets</b>
@@ -67,11 +67,11 @@
 </div>
 
 <div class="ui vertical stripe segment" style="padding-top: 2em; padding-bottom: 2em; background-color: #F5F5F5;">
-  <div class="ui container">
+  <div class="ui text container">
   <div class="ui centered grid">
     <div class="row">
       <!-- TODO: larger font size -->
-      <div class="nine wide column" style="font-size: 1.1rem;">
+      <div class="ten wide column" style="font-size: 1.1rem;">
         <p>The fatcat servcie is developed and hosted at <b><a
         href="https://archive.org">The Internet Archive</a></b>, a US
         non-profit dedicated to providing Universal Access to All Knowledge.
@@ -80,7 +80,7 @@
         preservation and access to "long-tail" open access works on the public
         web which could otherwise be lost.
       </div>
-      <div class="three wide column">
+      <div class="four wide column">
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/84/Internet_Archive_logo_and_wordmark.svg/250px-Internet_Archive_logo_and_wordmark.svg.png">
       </div>
     </div>
@@ -89,10 +89,10 @@
 </div>
 
 <div class="ui vertical stripe segment" style="background-color: #fffaf3; color: #573a08;">
-  <div class="ui container">
+  <div class="ui text container">
   <div class="ui centered grid">
     <div class="row">
-      <div class="nine wide column" style="font-size: 1.1rem;">
+      <div class="twelve wide column" style="font-size: 1.1rem;">
         <h5>Project Status: Beta</h5>
         <ul class="list">
             <li>Edits are manually reviewed (not automatically accepted)
