center 'other lookup' links

--- a/python/fatcat_web/templates/home.html
+++ b/python/fatcat_web/templates/home.html
@@ -141,7 +141,7 @@
             <i class="search icon"></i>
             <input type="text" placeholder="DOI" name="doi" aria-label="lookup paper by DOI">
           </div>
-        <br><a href="/release/lookup">Other Identifiers</a>
+        <br><center><a href="/release/lookup">Other Identifiers</a></center>
         </form>
 <tr><td><b>Container</b>
         <br>journal or serial
@@ -159,7 +159,7 @@
             <i class="search icon"></i>
             <input type="text" placeholder="ISSN-L" name="issnl" aria-label="lookup journal by ISSN-L">
           </div>
-        <br><a href="/container/lookup">Other Identifiers</a>
+        <br><a href="/container/lookup"><center>Other Identifiers</a></center>
         </form>
 
 <tr><td><b>Creator</b>
@@ -178,7 +178,7 @@
             <i class="search icon"></i>
             <input type="text" placeholder="ORCID" name="orcid" aria-label="lookup author by ORCID">
           </div>
-        <br><a href="/creator/lookup">Other Identifiers</a>
+        <br><a href="/creator/lookup"><center>Other Identifiers</a></center>
         </form>
 <tr><td><b>File</b>
         <br>specific digital blobs (immutable)
@@ -195,7 +195,7 @@
             <i class="search icon"></i>
             <input type="text" placeholder="SHA-1" name="sha1" aria-label="lookup file by SHA1">
           </div>
-        <br><a href="/file/lookup">Other Hashes</a>
+        <br><a href="/file/lookup"><center>Other Hashes</a></center>
         </form>
 <tr><td><b>File Set</b>
         <br>datasets, suplementary materials
