--- a/python/fatcat_web/templates/entity_metadata.html
+++ b/python/fatcat_web/templates/entity_metadata.html
@@ -9,5 +9,8 @@
   {{ entity_macros.extra_metadata(entity.extra) }}
 {% endif %}
 
+<h3>Entity Metadata (schema)</h3>
+{{ entity_macros.extra_metadata(entity._metadata) }}
+
 {% endblock %}
 
