--- a/python/fatcat_web/templates/release_view.html
+++ b/python/fatcat_web/templates/release_view.html
@@ -104,7 +104,7 @@
 </div>
 
 <div class="ui stackable mobile reversed grid centered">
-<div class="ten wide column" style="font-size: 16px;">
+<div class="column" style="font-size: 16px; flex: 1;">
 
 {% if release.abstracts != [] %}
 <h3>Abstract</h3>
@@ -343,7 +343,7 @@
 
 
 </div>
-<div class="six wide column">
+<div class="column" style="flex: 0 0 24em;">
 
 {% if entity.files != [] and entity.files[0].urls != [] %}
 <a href="{{ entity.files[0].urls[0].url }}" class="ui top attached fluid huge green button"><i class="file pdf outline icon"></i>Download Full Text</a>
